--- a/index.html
+++ b/index.html
@@ -6,8 +6,83 @@
     <title>Flixonar Shop</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- 🔹 To dodaje logo w przeglądarce -->
+    <!-- 🔹 Logo w przeglądarce -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            color: #000000;
+        }
+
+        header {
+            background-color: #9639c2;
+            color: rgb(255, 255, 255);
+            padding: 15px;
+            text-align: center;
+        }
+
+        header nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        header nav ul li a {
+            color: rgb(251, 251, 251);
+            text-decoration: none;
+        }
+
+        .product-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            padding: 20px;
+            justify-content: center;
+        }
+
+        .product {
+            border: 1px solid #000000;
+            border-radius: 8px;
+            padding: 15px;
+            text-align: center;
+            width: 200px;
+        }
+
+        .product img {
+            max-width: 100%;
+            border-radius: 5px;
+        }
+
+        #cart {
+            padding: 20px;
+            background-color: #74b2d9;
+        }
+
+        footer {
+            background-color: #333;
+            color: rgb(255, 255, 255);
+            text-align: center;
+            padding: 10px;
+        }
+
+        button {
+            padding: 8px 12px;
+            border: none;
+            background-color: #25e66f;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #8b2aaf;
+        }
+    </style>
 </head>
 <body>
     <!-- Nagłówek -->
@@ -26,19 +101,22 @@
         <h2>Nasze produkty</h2>
         <div class="product-list">
             <div class="product">
+                <img src="shox.jpg" alt="Nike shox">
                 <h3>Produkt 1</h3>
-                <p>Cena: 50 zł</p>
-                <button onclick="addToCart('Produkt 1', 50)">Dodaj do koszyka</button>
+                <p>Cena: 340 zł</p>
+                <button onclick="addToCart('Nike shox', 340)">Dodaj do koszyka</button>
             </div>
             <div class="product">
+                <img src="af1.jpg" alt="Nike Air Force">
                 <h3>Produkt 2</h3>
-                <p>Cena: 120 zł</p>
-                <button onclick="addToCart('Produkt 2', 120)">Dodaj do koszyka</button>
+                <p>Cena: 280 zł</p>
+                <button onclick="addToCart('Nike Air Force', 280)">Dodaj do koszyka</button>
             </div>
             <div class="product">
+                <img src="campus.jpg" alt="Adidas Campus">
                 <h3>Produkt 3</h3>
-                <p>Cena: 75 zł</p>
-                <button onclick="addToCart('Produkt 3', 75)">Dodaj do koszyka</button>
+                <p>Cena: 259 zł</p>
+                <button onclick="addToCart('Adidas Campus', 259)">Dodaj do koszyka</button>
             </div>
         </div>
     </section>
@@ -53,7 +131,7 @@
 
     <!-- Stopka -->
     <footer>
-        <p>&copy; 2025 Mój Sklep. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2025 Flixonar Shop. Wszelkie prawa zastrzeżone.</p>
     </footer>
 
     <script src="script.js"></script>
