--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- 🔹 Logo w przeglądarce -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="icon.jpg">
 
     <style>
         body {
@@ -118,6 +118,11 @@
                 <p>Cena: 259 zł</p>
                 <button onclick="addToCart('Adidas Campus', 259)">Dodaj do koszyka</button>
             </div>
+            <div class="product">
+                <img src="jordan.jpg" alt="Nike Air Jordan 4">
+                <h3>Produkt 4</h3>
+                <p>Cena: 379 zł</p>
+                <button onclick="addToCart('Nike Air Jordan 4', 379)">Dodaj do koszyka</button>
         </div>
     </section>
 
