--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
         <nav>
             <ul>
                 <li><a href="#products">Produkty</a></li>
+                <li><a href="#shoes">Buty</a></li>
+                <li><a href="#t-shirt">Bluzki</a></li>
                 <li><a href="#cart">Koszyk</a></li>
             </ul>
         </nav>
@@ -123,11 +125,11 @@
                 <h3>Produkt 4</h3>
                 <p>Cena: 379 zł</p>
                 <button onclick="addToCart('Nike Air Jordan 4', 379)">Dodaj do koszyka</button>
-        </div>
+            </div>
     </section>
 
     <!-- Koszyk -->
-    <section id="cart">
+<section id="cart">
         <h2>Twój koszyk</h2>
         <ul id="cart-items"></ul>
         <p id="total">Suma: 0 zł</p>
