--- a/index.html
+++ b/index.html
@@ -69,19 +69,20 @@
             text-align: center;
             padding: 10px;
         }
-
+ 
         button {
             padding: 8px 12px;
             border: none;
             background-color: #25e66f;
-            color: white;
+            color: rgb(255, 255, 255);
             border-radius: 5px;
             cursor: pointer;
         }
 
         button:hover {
-            background-color: #8b2aaf;
+            background-color: #9639c2;
         }
+
     </style>
 </head>
 <body>
@@ -144,3 +145,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<p id="visitor-count">👀 Liczba odwiedzin: 0</p>
