--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <li><a href="#products">Produkty</a></li>
                 <li><a href="#shoes">Buty</a></li>
                 <li><a href="#t-shirt">Bluzki</a></li>
+                <li><a href="#mystery-box">Mystery Boxy</a></li>
                 <li><a href="#cart">Koszyk</a></li>
             </ul>
         </nav>
@@ -145,5 +146,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-<p id="visitor-count">👀 Liczba odwiedzin: 0</p>
