--- a/index.html
+++ b/index.html
@@ -91,11 +91,13 @@
         <h1>Flixonar Shop</h1>
         <nav>
             <ul>
+                <li><a href="#home-page">Strona główna</a></li>
                 <li><a href="#products">Produkty</a></li>
                 <li><a href="#shoes">Buty</a></li>
                 <li><a href="#t-shirt">Bluzki</a></li>
                 <li><a href="#mystery-box">Mystery Boxy</a></li>
                 <li><a href="#cart">Koszyk</a></li>
+                <li><a href="#contact">Kontakt</a></li>
             </ul>
         </nav>
     </header>
